# my_c_language_learn

./: CMakeLists.txt  README.md  main.c  main.i  main.s
day1/: Change.c  DataType.c  Point.c
day2/: Array.c  ArrayPoint.c  MorePoints.c  SecondPoint.c
day3/: MemoryTest.c
day4/: StringCastTest.c  StringCompare.c  StringFInd.c  StringTest.c
day5/: EnumCast.c  EnumTest1.c  StructTest.c  StructTest2.c
day6/: FileCopy.c  FileTest1.c  FileTest2.c
day7/: SortTest.c
